@@ -1,13 +1,17 @@
 Changes from Version 0.15-21 to 0.15-22 [XX-XX-20XX]
 
+* crs.messages=FALSE was being ignored in frscv, krscv, frscvNOMAD, and
+  krscvNOMAD, as was the passing of additional arguments via opts=list()
+  to snomadr from certain functions
+
 * Default settings for tuning parameters for snomadr in npglpreg have been
   optimized based on extensive simulations for simulated and real datasets
   (we `optimized the optimizer' so to speak)
 
 * Fixed glitch in npglpreg where cv.aic was only working properly for
-  local constant (degree=0)
+  the local constant estimator (i.e. degree=0)
 
-* bwscaling is deprecated in latest (development) version of np which
+* bwscaling is deprecated in the latest (development) version of np which
   necessitated changes to npglpreg. In the process the way scaling is
   performed ought to be more robust in general due to changes to default
   starting values for numeric predictors
